removed unnessecary scrollbars and minor cosmetic fixes

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -156,7 +156,6 @@ header h1 {
     position: relative;
     padding-top: 1%;
     background: hsl(0 0% 90%);
-    padding-bottom: 5%;
 }
 
 
@@ -201,7 +200,7 @@ header h1 {
         "selector selector playlist-btn"
         "selection selection selection"
         "queue queue queue";*/
-    grid-template-rows: 1fr 4fr 1fr 4fr;
+    grid-template-rows: .5fr 4fr .5fr 4fr;
     grid-template-columns: 1fr 1fr;
     grid-template-areas: 
         "selector result-info"
@@ -215,6 +214,7 @@ header h1 {
     position: relative;
     height: 100%;
     width: 100%;
+    overflow: hidden;
 }
 
 #queue {
@@ -228,13 +228,13 @@ header h1 {
 
 
 .result-list {
+    position: relative;
     width: 100%;
     height: 100%;
     list-style-type: none;
     display: flex;
     flex-direction: row;
     color: black;
-
 }
 
 .arrow{
@@ -267,8 +267,8 @@ header h1 {
     background: hsl(0 0% 98%);
     color: hsl(0 0% 10%);
     height: 90%;
-    width: 20%;
-    left: 0;
+    width: 40%;
+    right: -20%;
 }
 
 .list-loader {
@@ -382,7 +382,7 @@ header h1 {
     padding: .5rem;
 }
 
-.card-pic {
+/*.card-pic {
     position: relative;
     content: "";
     padding-top: 100%;
@@ -390,16 +390,16 @@ header h1 {
     overflow: hidden;
     border-radius: 10%;
 
+}*/
+
+.card img, .img-filler {
+    position: relative;
+    max-width: 100%;
+    max-height: 100%;
+    aspect-ratio: 1 / 1;
+    width: auto;
 }
 
-.card-pic img {
-    position: absolute;
-    width: 100%;
-    top: 0;
-    left: 0;
-    margin: auto;
-    bottom: 0;
-}
 
 .card-name {
     text-align: center;
